--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-  "name": "musicapp",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "MusicApp",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "apk-build": "eas build -p android --profile preview",
-    "tsc": "tsc"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "lint": "eslint .",
+    "start": "react-native start",
+    "test": "jest"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
-    "@types/react": "~18.0.27",
-    "expo": "~48.0.18",
-    "expo-av": "~13.2.1",
-    "expo-battery": "~7.1.1",
-    "expo-media-library": "~15.2.3",
-    "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-web": "~0.18.10",
-    "typescript": "^4.9.4"
+    "react-native": "0.72.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.9",
+    "@tsconfig/react-native": "^3.0.0",
+    "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
+    "eslint": "^8.19.0",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.76.7",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
   },
-  "private": true
+  "engines": {
+    "node": ">=16"
+  }
 }
