Add side panel for app, add About dialog box

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_native_splash: ^2.4.1
   just_audio_background: ^0.0.1-beta.13
   audio_session: ^0.1.21
+  package_info_plus: ^8.0.2
 
 dev_dependencies:
   flutter_test:
