--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   package_info_plus: ^8.0.2
   sqflite: ^2.3.3+1
   path: ^1.9.0
+  filesystem_picker: ^4.1.0
 
 dev_dependencies:
   flutter_test:
