--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   sqflite: ^2.3.3+1
   path: ^1.9.0
   filesystem_picker: ^4.1.0
+  animated_tree_view: ^2.3.0
 
 dev_dependencies:
   flutter_test:
