--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   filesystem_picker: ^4.1.0
   animated_tree_view: ^2.3.0
   audio_service: ^0.18.17
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_test:
